--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -20,11 +20,11 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[Your purpose here]</p>
+    <p>My purpose is to build my brand and bring joy to costumers! With this I hope to earn more revenue to grow my business and make it the best it can be!</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Your audience here]</p>
+    <p>My audience is everyone who is looking to do White Water Rafting. It's for anyone of any age or caliber who wants to try it out or has been doing it for years and needs a place to raft. My hope is with this website that anyone can access it from any device.</p>
     <!-- change this -->
 
     <hr />
@@ -42,8 +42,8 @@
 
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
-    <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c"
-      target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+    <a href="https://coolors.co/0e0e52-8bd3e5-ff8360-eedf6d"
+      target="palette">https://coolors.co/0e0e52-8bd3e5-ff8360-eedf6d</a>
 
     <table class="colors">
       <tr>
@@ -54,10 +54,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#396E94]</td>
-        <td class="secondary">[#E7C24F]</td>
-        <td class="accent1">[#A43312]</td>
-        <td class="accent2"></td>
+        <td class="primary">#0E0E52</td>
+        <td class="secondary">#8BD3E5</td>
+        <td class="accent1">#FF8360</td>
+        <td class="accent2">#EEDF6D</td>
       </tr>
     </table>
 
@@ -67,11 +67,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Font Name here]
+      Heading Font: Nunito
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
+      Paragraph Font: Oxygen
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
