--- a/wwr/index.html
+++ b/wwr/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <a id="logo link" href="index.html">
+        <a id="logo_link" href="index.html">
             <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
         </a>
         <nav>
-            <a href=""index.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="#">Page 2</a>
             <a href="site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
