--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -120,9 +120,9 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
+    <h3>[Rivers</h3>
 
-    <img src="" alt="">
+    <img src="https://ckcomin.github.io/WDD130/wwr/images/Homepage.png" alt="page 2 wireframe">
 
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
