--- a/cuisineart/site-plan.html
+++ b/cuisineart/site-plan.html
@@ -88,8 +88,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Chef Services</a>
+        <a href="#">Meal Plans</a>
       </nav>
       <hr>
       <h2>
@@ -125,25 +125,30 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        This will be the landing page for the website. Here people will be able to see all the beautiful food that has been created by Cuisine Art. They will also be able to see what kind of diets Cuisine Art targets. The diets that they target are healthy or alternative diets. They will also be able to see that they cater to diets of those with health issues. 
+        The benefit of this website is that more people will have access to the services that Cuisine Art provides. It will also help in expanding the business as more people find out about it and want it in more places near them. The homepage will be of benefit because it will give a short little idea of what Cuisine Art is all about.
       </p>
       <p>Images for the Home page</p>
         <img src="#" alt="image for homepage">
         <img src="#" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Chef Services</h3>
       <p>
-        [Written copy for the Page 2 here]
+        This page will define how the private chef service is for everyone who may want a private chef for a special occasion where catering is not needed. This would include events for things like a small dinner, for people visiting the area, a date, and anything else that a private chef service may be wanted at. 
+        Having this page for the private chef services will help people better understand what this service entails. They will be able to see pictures where this service has been used. It will also allow for those who have a special diet be able to enjoy good food from someone who is experienced in special dietary needs. This page will also provide a link to book the service. There will also be some general price listings for people interested.
+        People will be on this page may also be looking for a catering service that works with special diets or healthy food. They will probably want a high-quality caterer with healthy foods and a service that can feed a large amount of people. People on this page may be looking for what kind of events Cuisine Art can cater which is every kind. 
+        The benefit of this page is that it will show people what Cuisine Art is able to provide for the customer. It will help the catering part of Cuisine Art be more widely known and accessed. They will be able to see some picture of events catered and what the setup looks like. The people on this page will be able to get a better grasp on why Cuisine Art is different from just an ordinary caterer and how good they are at catering events. This page will also provide a link to book the service. There will also be some general price listings for people interested.
       </p>
       <p>Images for the Page 2</p>
         <img src="#" alt="image for page">
         <img src="#" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Meal Plans</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Here people will be able to see that Cuisine Art also provides meal plans. They will be able to see some example of meal plans that Cuisine Art has done. They will also be able to see the different types of plans they offer. On this page there will also be a description of what the meal plans are and some recommendations. There will also be some general price listings for people interested. From this page people will be able to contact someone who can hear more about what kind of plan they want. 
+        People may want to come to this page because they are looking for a service that caters to their unique needs. They probably want to see all that Cuisine Art can provide to them. They may also be looking for a general idea of how much it will cost for them. People on this page will be able to leave having a grasp on what Cuisine Art’s meal plans include.
       </p>
       <p>Images for the Page 3</p>
         <img src="#" alt="image for page3">
