--- a/cuisineart/site-plan.html
+++ b/cuisineart/site-plan.html
@@ -130,7 +130,7 @@
       </p>
       <p>Images for the Home page</p>
         <img src="https://ckcomin.github.io/WDD130/cuisineart/images/DSC00473.jpg" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="https://ckcomin.github.io/WDD130/cuisineart/images/DSC00458.jpg" alt="image for homepage">
 
       </ul>
       <h3>Chef Services</h3>
