--- a/cuisineart/site-plan.html
+++ b/cuisineart/site-plan.html
@@ -129,8 +129,8 @@
         The benefit of this website is that more people will have access to the services that Cuisine Art provides. It will also help in expanding the business as more people find out about it and want it in more places near them. The homepage will be of benefit because it will give a short little idea of what Cuisine Art is all about.
       </p>
       <p>Images for the Home page</p>
+        <img src="https://ckcomin.github.io/WDD130/cuisineart/images/DSC00458.jpg" alt="image for homepage">
         <img src="https://ckcomin.github.io/WDD130/cuisineart/images/DSC00473.jpg" alt="image for homepage">
-        <img src="#" alt="image for homepage">
 
       </ul>
       <h3>Chef Services</h3>
@@ -141,8 +141,8 @@
         The benefit of this page is that it will show people what Cuisine Art is able to provide for the customer. It will help the catering part of Cuisine Art be more widely known and accessed. They will be able to see some picture of events catered and what the setup looks like. The people on this page will be able to get a better grasp on why Cuisine Art is different from just an ordinary caterer and how good they are at catering events. This page will also provide a link to book the service. There will also be some general price listings for people interested.
       </p>
       <p>Images for the Page 2</p>
+        <img src="https://ckcomin.github.io/WDD130/cuisineart/images/DSC00444.jpg" alt="image for page">
         <img src="https://ckcomin.github.io/WDD130/cuisineart/images/DSC00465.jpg" alt="image for page">
-        <img src="https://ckcomin.github.io/WDD130/cuisineart/images/DSC00488.jpg" alt="image for page">
 
       </ul>
       <h3>Meal Plans</h3>
@@ -151,7 +151,7 @@
         People may want to come to this page because they are looking for a service that caters to their unique needs. They probably want to see all that Cuisine Art can provide to them. They may also be looking for a general idea of how much it will cost for them. People on this page will be able to leave having a grasp on what Cuisine Art’s meal plans include.
       </p>
       <p>Images for the Page 3</p>
-        <img src="https://www.dropbox.com/s/5znqj0qgg7gp56w/DSC00465.jpg?dl=0" alt="image for page3">
+        <img src="#" alt="image for page3">
         <img src="#" alt="image for page3">
 
       </ul>
