--- a/cuisineart/site-plan.html
+++ b/cuisineart/site-plan.html
@@ -152,7 +152,7 @@
       </p>
       <p>Images for the Page 3</p>
         <img src="https://ckcomin.github.io/WDD130/cuisineart/images/Untitled%20design.png" alt="image for page3">
-        <img src="https://ckcomin.github.io/WDD130/cuisineart/images/pplwfood.png" alt="image for page3">
+        <img src="https://ckcomin.github.io/WDD130/cuisineart/images/pplwfood.png" alt="image for page">
 
       </ul>
       <hr>
