--- a/cuisineart/site-plan.html
+++ b/cuisineart/site-plan.html
@@ -100,10 +100,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Chef Services <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Meal Plans  <!-- change this -->
         </div>
 
         <div class="top">
@@ -164,21 +164,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        Pictures of food and owner
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/Homepage.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Chef Services</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        Pictures of service and setup
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/Chef Services.png" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Meal Plans</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        General idea of meal plans and link to call.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/Meal Plans.png" alt="page 3 wireframe">
     </main>
   </body>
 
