--- a/cuisineart/Chef_services.html
+++ b/cuisineart/Chef_services.html
@@ -26,20 +26,20 @@
         <main class="home-grid">
             <section id="service-card">
                 <h2 class="card-title">This Is The Service</h2>
-                <p class="card-msg">Saying what the service is</p>
+                <p class="card-msg"> Our Private chef service is for everyone who may want a private chef for a special occasion where catering is not needed. This would include events for things like a small dinner, for people visiting the area, a date, and anything else that a private chef service may be wanted at. Cuisine Art also provides high-quality caterering with healthy foods and a service that can feed a large amount of people.</p>
             </section>
             <section id="provide-card">
                 <img class="provide-img" src="images/DSC00465.jpg" alt="place setting">
                 <section id="provide-words">
                     <h2 class="card-title">What We Provide</h2>
-                    <p class="card-msg">What is provided</p>
+                    <p class="card-msg">Provided with our services is a well trained chef, food setup, and place settings.</p>
                 </section>
             </section>
             <section id="prices-card">
                 <img class="prices-img" src="images/DSC00444.jpg" alt="mom work">
                 <section id="prices-words">
                     <h2 class="card-title">Prices</h2>
-                    <p class="card-msg">General prices</p>
+                    <p class="card-msg">Coming Soon!</p>
                 </section>
             </section>
             <div class='button-box'>
