--- a/cuisineart/index.html
+++ b/cuisineart/index.html
@@ -48,16 +48,16 @@
                     </div>
                     <section class="who-words">
                         <h2 class="card-title">Who We Are</h2>
-                        <p class="card-msg">who cuisine art is</p>
+                        <p class="card-msg">Founded by Megan Comin, Cuisine Art is a catering company that specializes in creating beautiful food. We believe that every person deserves to eat beautifully created food made from scratch no matter what your dietary restrictions are.  </p>
                     </section>
                 </section>
                 <section class="what-card">
                     <h2 class="card-title">What We Do</h2>
-                    <p class="card-msg">What cuisine art does</p>
+                    <p class="card-msg">Cuisine Art caters to everyone especially those with special dietary needs. We cater all our foods to each individual client and provide life long service.</p>
                 </section>
                 <section class="why-card">
                     <h2 class="card-title">Why We Do It</h2>
-                    <p class="card-msg">Why cusisne art does what the do </p>
+                    <p class="card-msg">Many catering companies aren't able to cater to those who have specail restrictions. That is why we are here so that everyone as the avaiability to good high-end foods.</p>
                 </section>
             </main>
             <footer>
