--- a/cuisineart/meal_plans.html
+++ b/cuisineart/meal_plans.html
@@ -32,11 +32,11 @@
             </section>
             <section class="what-meals">
                 <h2 class="card-title">What Are Meal Plans?</h2>
-                <p class="card-msg">What meal plans are</p>
+                <p class="card-msg">Our meal plans are based upon what your nutritunists suggest. We will provide meal preps according to your specialist provided meal plan.</p>
             </section>
             <section class="recs">
                 <h2 class="card-title">Recommendations</h2>
-                <p class="card-msg">Some recommendations</p>
+                <p class="card-msg">We recommend talking to your nutitionist about what is right for you! As well as contacting someone at Cuisine Art to get all your prefrences.</p>
             </section>
             <div class='button-box'>
                 <a class='learn-more' href="contactus.html">Learn More</a>
