--- a/cuisineart/Chef_services.html
+++ b/cuisineart/Chef_services.html
@@ -19,18 +19,18 @@
                 <a href="meal_plans.html">Meal Plans</a>
             </nav>
         </header>
-        <div id="landing">
+        <div class="landing">
             <h1 class="title">Chef Services</h1>
-            <h3 class="title-msg">| Catering | Private Chef | </h3>
+            <h3 class="title-msg">| Catering | Private Chef |</h3>
         </div>
-        <main class="home-grid">
+        <main class="-grid">
             <section id="service-card">
                 <h2 class="card-title">This Is The Service</h2>
                 <p class="card-msg"> Our Private chef service is for everyone who may want a private chef for a special occasion where catering is not needed. This would include events for things like a small dinner, for people visiting the area, a date, and anything else that a private chef service may be wanted at. Cuisine Art also provides high-quality caterering with healthy foods and a service that can feed a large amount of people.</p>
             </section>
             <section id="provide-card">
-                <img class="provide-img" src="images/DSC00465.jpg" alt="place setting">
-                <section id="provide-words">
+                <img id="provide-img" src="images/DSC00465.jpg" alt="place setting">
+                <section class="provide-words">
                     <h2 class="card-title">What We Provide</h2>
                     <p class="card-msg">Provided with our services is a well trained chef, food setup, and place settings.</p>
                 </section>
