--- a/cuisineart/index.html
+++ b/cuisineart/index.html
@@ -19,10 +19,10 @@
                 <a href="meal_plans.html">Meal Plans</a>
             </nav>
         </header>
-        <div id="landing">
+        <div class="landing">
             <section id="msg">
-                <h1 class="title">Cuisine Art</h1>
-                <h3 class="title-msg">Houston Texas</h3>
+                <h1 >Cuisine Art</h1>
+                <h3 >Houston Texas</h3>
             </section>
             <div class="slidershow middle">
                 <div class="slides">
