--- a/cuisineart/meal_plans.html
+++ b/cuisineart/meal_plans.html
@@ -19,7 +19,7 @@
                 <a href="meal_plans.html">Meal Plans</a>
             </nav>
         </header>
-        <div id="landing">
+        <div class="landing">
             <h1 class="title">Meal Plans</h1>
             <h3 class="title-msg">| Meals Provided | </h3>
         </div>
