--- a/cuisineart/Chef_services.html
+++ b/cuisineart/Chef_services.html
@@ -19,7 +19,7 @@
                 <a href="meal_plans.html">Meal Plans</a>
             </nav>
         </header>
-        <div class="landing">
+        <div class="land">
             <h1 class="title">Chef Services</h1>
             <h3 class="title-msg">| Catering | Private Chef |</h3>
         </div>
