--- a/cuisineart/index.html
+++ b/cuisineart/index.html
@@ -44,7 +44,7 @@
             <main class="home-grid">
                 <section class="who-card">
                     <div class="who-img">
-                        <img class="card-img" src="" alt="">
+                        <img src="" alt="">
                     </div>
                     <section class="who-words">
                         <h2 class="card-title">Who We Are</h2>
