--- a/cuisineart/meal_plans.html
+++ b/cuisineart/meal_plans.html
@@ -19,16 +19,16 @@
                 <a href="meal_plans.html">Meal Plans</a>
             </nav>
         </header>
-        <div class="landing">
+        <div class="land">
             <h1 class="title">Meal Plans</h1>
             <h3 class="title-msg">| Meals Provided | </h3>
         </div>
         <main class="home-grid">
             <section id="meal-card">
-                <img class="card-img" src="https://ckcomin.github.io/WDD130/cuisineart/images/Untitled%20design.jpg" alt="image for page3">
+                <img class="card-img" src="images/Untitled design.jpg" alt="image for page3">
             </section>
             <section id="ppl-card">
-                <img class="card-img" src="https://ckcomin.github.io/WDD130/cuisineart/images/pplwfood.jpg" alt="image for page">
+                <img class="card-img" src="images/pplwfood.jpg" alt="image for page">
             </section>
             <section class="what-meals">
                 <h2 class="card-title">What Are Meal Plans?</h2>
