--- a/cuisineart/index.html
+++ b/cuisineart/index.html
@@ -28,28 +28,38 @@
                 <div class="slides">
                 <input type="radio" name="r" id="r1" checked />
                 <input type="radio" name="r" id="r2" />
+                <input type="radio" name="r" id="r3">
+                <input type="radio" name="r" id="r4">
                 <div class="slide s1">
                     <img src="images/DSC00473.jpg" alt="first">
                 </div>
                 <div class="slide">
                     <img src="images/DSC00458.jpg" alt="second">
                 </div>
+                <div class="slide">
+                    <img src="images/IMG_5288.JPG" alt="third">
+                </div>
+                <div class="slide">
+                    <img src="images/IMG_5488.JPG" alt="fourth">
+                </div>
                 </div>
                 <div class="navigation">
                     <label for="r1" class="bar"></label>
                     <label for="r2" class="bar"></label>
+                    <label for="r3" class="bar"></label>
+                    <label for="r4" class="bar"></label>
                 </div>
             </div>
         </div>
             <main class="home-grid">
                 <section class="who-card">
-                    <div class="who-img">
-                        <img src="" alt="">
-                    </div>
-                    <section class="who-words">
-                        <h2 class="card-title">Who We Are</h2>
-                        <p class="card-msg">Founded by Megan Comin, Cuisine Art is a catering company that specializes in creating beautiful food. We believe that every person deserves to eat beautifully created food made from scratch no matter what your dietary restrictions are.  </p>
-                    </section>
+                    <!-- <div class="who-img"> -->
+                    <img src="images/mom.png" alt="mom cooking">
+                    <!-- </div> -->
+                    <!-- <div id="wwords"> -->
+                    <h2 class="card-title">Who We Are</h2>
+                    <p class="card-msg">Founded by Megan Comin, Cuisine Art is a catering company that specializes in creating beautiful food. We believe that every person deserves to eat beautifully created food made from scratch no matter what your dietary restrictions are.  </p>
+                    <!-- </div> -->
                 </section>
                 <section class="what-card">
                     <h2 class="card-title">What We Do</h2>
