--- a/cuisineart/index.html
+++ b/cuisineart/index.html
@@ -51,41 +51,37 @@
                 </div>
             </div>
         </div>
-            <main class="home-grid">
-                <section class="who-card">
-                    <!-- <div class="who-img"> -->
-                    <img src="images/mom.png" alt="mom cooking">
-                    <!-- </div> -->
-                    <!-- <div id="wwords"> -->
-                    <h2 class="card-title">Who We Are</h2>
-                    <p class="card-msg">Founded by Megan Comin, Cuisine Art is a catering company that specializes in creating beautiful food. We believe that every person deserves to eat beautifully created food made from scratch no matter what your dietary restrictions are.  </p>
-                    <!-- </div> -->
-                </section>
-                <section class="what-card">
-                    <h2 class="card-title">What We Do</h2>
-                    <p class="card-msg">Cuisine Art caters to everyone especially those with special dietary needs. We cater all our foods to each individual client and provide life long service.</p>
-                </section>
-                <section class="why-card">
-                    <h2 class="card-title">Why We Do It</h2>
-                    <p class="card-msg">Many catering companies aren't able to cater to those who have specail restrictions. That is why we are here so that everyone as the avaiability to good high-end foods.</p>
-                </section>
-            </main>
-            <footer>
-                <h3>Cuisine Art &copy; 2022 - Caroline Comin</h3>
-                <h3><a href="contactus.html">Contact Us</a></h3>
-                <div class="social">
-                    <a href="https://facebook.com">
-                        <img src="images/facebook.png" alt="fb icon">
-                    </a>
-                    <a href="https://twitter.com">
-                        <img src="images/twitter.png" alt="twitter icon">
-                    </a>
-                    <a href="https://instagram.com">
-                        <img src="images/instagram.png" alt="instagram icon">
-                    </a>
-                </div>
-            </footer>
-        </div>
+        <main class="home-grid">
+            <img class="who-img" src="images/mom.png" alt="mom cooking">
+            <section class="who-card">
+                <h2 class="card-title">Who We Are</h2>
+                <p class="card-msg">Founded by Megan Comin, Cuisine Art is a catering company that specializes in creating beautiful food. We believe that every person deserves to eat beautifully created food made from scratch no matter what your dietary restrictions are.  </p>
+            </section>
+            <div id="background"></div> 
+            <section class="what-card">
+                <h2 class="card-title">What We Do</h2>
+                <p class="card-msg">Cuisine Art caters to everyone especially those with special dietary needs. We cater all our foods to each individual client and provide life long service.</p>
+            </section>
+            <section class="why-card">
+                <h2 class="card-title">Why We Do It</h2>
+                <p class="card-msg">Many catering companies aren't able to cater to those who have specail restrictions. That is why we are here so that everyone as the avaiability to good high-end foods.</p>
+            </section>
+        </main>
+        <footer>
+            <h3>Cuisine Art &copy; 2022 - Caroline Comin</h3>
+            <h3><a href="contactus.html">Contact Us</a></h3>
+            <div class="social">
+                <a href="https://www.facebook.com/cuisinearthouston/">
+                    <img src="images/facebook.png" alt="fb icon">
+                </a>
+                <a href="https://twitter.com">
+                    <img src="images/twitter.png" alt="twitter icon">
+                </a>
+                <a href="https://www.instagram.com/cuisinearthouston/?hl=en">
+                    <img src="images/instagram.png" alt="instagram icon">
+                </a>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
