--- a/cuisineart/site-plan.html
+++ b/cuisineart/site-plan.html
@@ -131,7 +131,9 @@
       <p>Images for the Home page</p>
         <img src="https://ckcomin.github.io/WDD130/cuisineart/images/DSC00458.jpg" alt="image for homepage">
         <img src="https://ckcomin.github.io/WDD130/cuisineart/images/DSC00473.jpg" alt="image for homepage">
-
+        <img src="images/IMG_5288.JPG" alt="homepage">
+        <img src="images/IMG_5488.JPG" alt="home">
+        <img src="images/mom.png" alt="home">
       </ul>
       <h3>Chef Services</h3>
       <p>
