--- a/cuisineart/index.html
+++ b/cuisineart/index.html
@@ -64,7 +64,7 @@
             </section>
             <section class="why-card">
                 <h2 class="card-title">Why We Do It</h2>
-                <p class="card-msg">Many catering companies aren't able to cater to those who have special restrictions. That is why we are here so that everyone as the avaiability to good high-end foods.</p>
+                <p class="card-msg">Many catering companies aren't able to cater to those who have special restrictions. That is why we are here so that everyone as the availability to good high-end foods.</p>
             </section>
         </main>
         <footer>
