--- a/cuisineart/site-plan.html
+++ b/cuisineart/site-plan.html
@@ -153,8 +153,8 @@
         People may want to come to this page because they are looking for a service that caters to their unique needs. They probably want to see all that Cuisine Art can provide to them. They may also be looking for a general idea of how much it will cost for them. People on this page will be able to leave having a grasp on what Cuisine Art’s meal plans include.
       </p>
       <p>Images for the Page 3</p>
-        <img src="https://ckcomin.github.io/WDD130/cuisineart/images/Untitled%20design.jpg" alt="image for page3">
-        <img src="https://ckcomin.github.io/WDD130/cuisineart/images/pplwfood.jpg" alt="image for page">
+        <img src="images/meal 1.JPG" alt="image for page3">
+        <img src="images/meal 2.JPG" alt="image for page">
 
       </ul>
       <hr>
