--- a/cuisineart/Chef_services.html
+++ b/cuisineart/Chef_services.html
@@ -26,7 +26,7 @@
         <main class="home-grid">
             <section id="service-card">
                 <h2 class="card-title">This Is The Service</h2>
-                <p class="card-msg"> Our Private chef service is for everyone who may want a private chef for a special occasion where catering is not needed. This would include events for things like a small dinner, for people visiting the area, a date, and anything else that a private chef service may be wanted at. Cuisine Art also provides high-quality caterering with healthy foods and a service that can feed a large amount of people.</p>
+                <p class="card-msg"> Our Private chef service is for everyone who may want a private chef for a special occasion where catering is not needed. This would include events such as a small dinner, people visiting the area, a date, and anything else that a private chef service may be wanted at. Cuisine Art also provides high-quality caterering with healthy foods and a service that can feed a large amount of people.</p>
             </section>
             <img id="provide-img" src="images/DSC00465.jpg" alt="place setting">
             <section class="provide-words">
@@ -44,6 +44,7 @@
         </main>
         <footer>
             <h3>Cuisine Art &copy; 2022 - Caroline Comin</h3>
+            <h3><a href="site-plan.html">Site Plan</a></h3>
             <h3><a href="contactus.html">Contact Us</a></h3>
             <div class="social">
                 <a href="https://facebook.com">
