--- a/cuisineart/index.html
+++ b/cuisineart/index.html
@@ -64,11 +64,12 @@
             </section>
             <section class="why-card">
                 <h2 class="card-title">Why We Do It</h2>
-                <p class="card-msg">Many catering companies aren't able to cater to those who have special restrictions. That is why we are here so that everyone as the availability to good high-end foods.</p>
+                <p class="card-msg">Many catering companies aren't able to cater to those who have special restrictions. That is why we are here so that everyone has the availability to good high-end foods.</p>
             </section>
         </main>
         <footer>
             <h3>Cuisine Art &copy; 2022 - Caroline Comin</h3>
+            <h3><a href="site-plan.html">Site Plan</a></h3>
             <h3><a href="contactus.html">Contact Us</a></h3>
             <div class="social">
                 <a href="https://www.facebook.com/cuisinearthouston/">
