--- a/cuisineart/meal_plans.html
+++ b/cuisineart/meal_plans.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="styles/style.css">
     <meta charset="UTF-8">
@@ -7,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cuisine Art | Home</title>
 </head>
+
 <body>
     <div id="content">
         <header>
@@ -32,11 +34,13 @@
             </section>
             <section class="what-meals">
                 <h2 class="card-title">What Are Meal Plans?</h2>
-                <p class="card-msg">Our meal plans are based upon what your nutritunists suggest. We will provide meal preps according to your specialist provided meal plan.</p>
+                <p class="card-msg">Our meal plans are based upon what your nutritionist suggest. We will provide meal
+                    preps according to your specialist provided meal plan.</p>
             </section>
             <section class="recs">
                 <h2 class="card-title">Recommendations</h2>
-                <p class="card-msg">We recommend talking to your nutitionist about what is right for you! As well as contacting someone at Cuisine Art to get all your prefrences.</p>
+                <p class="card-msg">We recommend talking to your nutritionist about what is right for you! As well as
+                    contacting someone at Cuisine Art to get all your prefrences.</p>
             </section>
             <div class='button-box'>
                 <a class='learn-more' href="contactus.html">Learn More</a>
@@ -44,6 +48,7 @@
         </main>
         <footer>
             <h3>Cuisine Art &copy; 2022 - Caroline Comin</h3>
+            <h3><a href="site-plan.html">Site Plan</a></h3>
             <h3><a href="contactus.html">Contact Us</a></h3>
             <div class="social">
                 <a href="https://facebook.com">
@@ -58,6 +63,7 @@
             </div>
         </footer>
     </div>
-    
+
 </body>
+
 </html>
