--- a/cuisineart/site-plan.html
+++ b/cuisineart/site-plan.html
@@ -25,7 +25,7 @@
 
 
       <h3>Audience</h3>
-      <p>Our intended audience is everyone looking for a food service for any ocassion. Whether it be for a party, wedding, family reunion, or simply a nice meal at home!</p>  <!-- change this -->
+      <p>Our intended audience is everyone looking for a food service for any occasion. Whether it be for a party, wedding, family reunion, or simply a nice meal at home!</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
@@ -153,8 +153,8 @@
         People may want to come to this page because they are looking for a service that caters to their unique needs. They probably want to see all that Cuisine Art can provide to them. They may also be looking for a general idea of how much it will cost for them. People on this page will be able to leave having a grasp on what Cuisine Art’s meal plans include.
       </p>
       <p>Images for the Page 3</p>
-        <img src="images/meal 1.JPG" alt="image for page3">
-        <img src="images/meal 2.JPG" alt="image for page">
+        <img src="images/meal1.JPG" alt="image for page3">
+        <img src="images/meal2.JPG" alt="image for page">
 
       </ul>
       <hr>
